cmss/main/default/objects/Access_Log__c/Access_Log__c.object-meta.xml
<CustomObject>
    <label>Access Log</label>
    <nameField>
        <displayFormat>AL-{YYYY}-{MM}-{000000}</displayFormat>
        <label>Access Log Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Access Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>