cmss/main/default/objects/Access_Log__c/fields/AccessTo__c.field-meta.xml
<CustomField>
    <fullName>AccessTo__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Access To</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Access Logs</relationshipLabel>
    <relationshipName>Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>