cmss/main/default/objects/Access_Log__c/fields/Detail__c.field-meta.xml
<CustomField>
    <fullName>Detail__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Detail</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>