cmss/main/default/objects/Access_Log__c/fields/FilterCPUSuffix__c.field-meta.xml
<CustomField>
    <fullName>FilterCPUSuffix__c</fullName>
    <label>FilterCPUSuffix</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>