cmss/main/default/objects/Access_Log__c/fields/FilterOwnerCommissionAccountBase__c.field-meta.xml
<CustomField>
    <fullName>FilterOwnerCommissionAccountBase__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FilterOwnerCommissionAccountBase</label>
    <length>255</length>
    <type>Text</type>
</CustomField>