cmss/main/default/objects/Access_Log__c/fields/FilterPeriod__c.field-meta.xml
<CustomField>
    <fullName>FilterPeriod__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FilterPeriod</label>
    <length>255</length>
    <type>Text</type>
</CustomField>