cmss/main/default/objects/Access_Log__c/fields/FilterRecordNumber__c.field-meta.xml
<CustomField>
    <fullName>FilterRecordNumber__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FilterRecordNumber</label>
    <length>255</length>
    <type>Text</type>
</CustomField>