cmss/main/default/objects/Access_Log__c/fields/FilterStatementType__c.field-meta.xml
<CustomField>
    <fullName>FilterStatementType__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>FilterStatementType</label>
    <length>255</length>
    <type>Text</type>
</CustomField>