cmss/main/default/objects/Access_Log__c/fields/RequestedBy__c.field-meta.xml
<CustomField>
    <fullName>RequestedBy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Access_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>