cmss/main/default/objects/Access_Log__c/fields/TaskID__c.field-meta.xml
<CustomField>
    <fullName>TaskID__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>TaskId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>