cmss/main/default/objects/Access_Log__c/fields/TaskLetterId__c.field-meta.xml
<CustomField>
    <fullName>TaskLetterId__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <externalId>true</externalId>
    <label>TaskLetterId</label>
    <length>50</length>
    <type>Text</type>
</CustomField>