cmss/main/default/objects/Access_Log__c/fields/TaskLetterType__c.field-meta.xml
<CustomField>
    <fullName>TaskLetterType__c</fullName>
    <label>TaskLetterType</label>
    <encryptionScheme>None</encryptionScheme>
    <length>50</length>
    <type>Text</type>
</CustomField>