cmss/main/default/objects/Access_Log__c/recordTypes/AccountAccess.recordType-meta.xml
<RecordType>
    <fullName>AccountAccess</fullName>
    <active>true</active>
    <label>Account Access</label>
</RecordType>