cmss/main/default/objects/Access_Log__c/recordTypes/LetterAccess.recordType-meta.xml
<RecordType>
    <fullName>LetterAccess</fullName>
    <active>true</active>
    <label>Letter Access</label>
</RecordType>