cmss/main/default/objects/Access_Log__c/recordTypes/PVPDFExport.recordType-meta.xml
<RecordType>
    <fullName>PVPDFExport</fullName>
    <active>true</active>
    <label>PV PDF Export</label>
</RecordType>