cmss/main/default/objects/Access_Log__c/listViews/LogsTemporarySharing.listView-meta.xml
<ListView>
    <fullName>LogsTemporarySharing</fullName>
    <columns>NAME</columns>
    <columns>CREATED_DATE</columns>
    <columns>RequestedBy__c</columns>
    <columns>AccessTo__c</columns>
    <columns>OWNER.LAST_NAME</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <columns>Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>Logy - dočasný sharing</label>
</ListView>